--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -1,3 +1,4 @@
 {
-   "python.pythonPath": "/home/gitpod/.pyenv/versions/3.7.4/bin/python"
+   "python.pythonPath": "/home/gitpod/.pyenv/versions/3.7.4/bin/python",
+   "editor.autoSave": "off"
 }
